# kex

./: .clang-format  .gitattributes  .readthedocs.yaml  CHANGELOG.md  CMakeLists.txt  README.md
docs/: .gitignore  Doxyfile  requirements.txt
docs/source/: conf.py  core.rst  index.rst  sprites.rst  textures.rst
docs/source/definitions/: index.rst  rectangle.rst
examples/: CMakeLists.txt  demo.cpp
examples/kex-sdl2-demo/: CMakeLists.txt
examples/kex-sdl2-demo/src/: main.cpp
include/glad/: gles2.h
include/kex/: buffer.h  buffer.hpp  def.h  def.hpp  font.hpp  kex.h  kex.hpp  program.h  program.hpp  shader.h  shader.hpp  sprite.h  sprite.hpp  spritebatch.h  spritebatch.hpp  text.hpp  texture.h  texture.hpp  utils.hpp  vertexarray.h  vertexarray.hpp
src/: CMakeLists.txt  Texture.cpp
src/kex/: buffer.cpp  font.cpp  kex.cpp  program.cpp  shader.cpp  sprite.cpp  spritebatch.cpp  text.cpp  texture.cpp  utils.cpp  vertexarray.cpp
